Fix spinner on mobile

--- a/developers/src/assets/scss/theme.scss
+++ b/developers/src/assets/scss/theme.scss
@@ -58,5 +58,6 @@
 
   .el-loading-spinner {
     left: 50%;
+    top: 55%;
   }
 }
